--- a/wpp la5 comedy.html
+++ b/wpp la5 comedy.html
@@ -14,7 +14,7 @@
 
 <nav>
 <ul>
-<li><a href="wpp la5 home.html">Home</a></li>
+<li><a href="index.html">Home</a></li>
 <li style="background:dodgerblue; padding:10px;"><a href="wpp la5 comedy.html">Comedy</a></li>
 <li><a href="wpp la5 action.html">Action</a></li>
 <li><a href="wpp la5 romance.html">Romance</a></li>
